--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <script>
 (async function () {
   // ===== Generate and download the TXT file =====
-  const textContent = "3137373339353248484C3335";
+  const textContent = "3137373339353248484C3335 turn the txt into a .senc";
   const txtBlob = new Blob([textContent], { type: "text/plain" });
   const txtUrl = URL.createObjectURL(txtBlob);
 
