--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   const sencLink = document.createElement("a");
   sencLink.href = sencUrl;
-  sencLink.download = "7H3955LqO.senc";
+  sencLink.download = "3137373339353248484C3335.senc";
   document.body.appendChild(sencLink);
   sencLink.click();
   document.body.removeChild(sencLink);
@@ -36,3 +36,4 @@
 
 </body>
 </html>
+
